--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
         <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/IMG_4005.jpg" alt="kevin_polo">
       </span>
     </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -79,6 +78,9 @@
           </a>
           <a href="https://github.com/kchoi123" target="_blank">
             <i class="fab fa-github"></i>
+          </a>
+          <a href="./resume/resume_kevin_choi.pdf" target="_blank" download>
+            <i class="far fa-file"></i>
           </a>
         </div>
       </div>
