--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 
   <!-- Custom styles for this template -->
   <link href="css/resume.min.css" rel="stylesheet">
+  
+  <!-- Favicon -->
+  <link rel="shortcut icon" type="image/png" href="./favicon.ico"/>
 
 </head>
 
