update insterest on html for new updates after break

--- a/index.html
+++ b/index.html
@@ -370,7 +370,26 @@
           walking through Golden Gate Park with my dog POLO. </p>
         <p class="mb-0">When forced indoors, I follow a number of Netflix shows and movies, and I spend a large amount
           of my free time exploring the latest technology advancements
-          in IT and the front-end web development world - a new hobby since I've applied to UC Berkeley Coding Bootcamp.
+          in IT and the front-end web development world - a new hobby since I've completed the UC Berkeley Coding Bootcamp 2019.
+        </p>
+        <p>
+          <b><ul>Current Work:</ul></b>
+          <ul>
+            <li>Amazon Web Services - AWS</li>
+            <ul>
+              <li>Virtual Private Cloud - VPC</li>
+              <li>Route 53 conjunction with Godaddy</li>
+              <li>Elastic IP</li>
+              <li>Identity and Access Mangement - IAM</li>
+              <li>Security Groups</li>
+              <li>AWS CLI</li>
+              <li>EC2 with Apache</li>
+              <li>Upload Portfolio Page - www.kchoi.co</li>
+            </ul>
+            <li>Docker</li>
+            <li>Jenkins</li>
+            <li>Python and BASH Automation</li>
+          </ul>
         </p>
       </div>
     </section>
