updates to interest to add nginx apache and current website

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 
   <!-- Custom styles for this template -->
   <link href="css/resume.min.css" rel="stylesheet">
-  
+
   <!-- Favicon -->
-  <link rel="shortcut icon" type="image/png" href="./favicon.ico"/>
+  <link rel="shortcut icon" type="image/png" href="./favicon.ico" />
 
 </head>
 
@@ -372,8 +372,9 @@
           of my free time exploring the latest technology advancements
           in IT and the front-end web development world - a new hobby since I've completed the UC Berkeley Coding Bootcamp 2019.
         </p>
+        <br>
         <p>
-          <b><ul>Current Work:</ul></b>
+          <b>Current Work:</b>
           <ul>
             <li>Amazon Web Services - AWS</li>
             <ul>
@@ -383,9 +384,16 @@
               <li>Identity and Access Mangement - IAM</li>
               <li>Security Groups</li>
               <li>AWS CLI</li>
-              <li>EC2 with Apache</li>
-              <li>Upload Portfolio Page - www.kchoi.co</li>
+              <li>2x EC2 with Apache & Nginx</li>
+              <li>Upload Portfolio Page:
+                <ul>
+                  <li><a href="http://apache.kchoi.co" target="_blank">Apache</a></li>
+                  <li><a href="http://nginx.kchoi.co" target="_blank">Nginx</a></li></li>
+                  <li><a href="http://www.kchoi.co" target="_blank">Main</a></li></li>
+                </ul>
             </ul>
+            <li>PM2</li>
+            <li>AWS Code Deploy</li>
             <li>Docker</li>
             <li>Jenkins</li>
             <li>Python and BASH Automation</li>
