--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <link href="css/resume.min.css" rel="stylesheet">
 
   <!-- Favicon -->
-  <link rel="shortcut icon" type="image/png" href="./favicon.ico" />
+  <link rel="shortcut icon" href="./favicon.ico" />
 
 </head>
 
