update portfolio with new resume and add certs

--- a/index.html
+++ b/index.html
@@ -410,6 +410,10 @@
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-certificate text-warning"></i>
+            AWS Certified Cloud Practitioner, Validation Number W6Y2NVJCBEV11JK3</li>
+          <li>
+          <li>
+            <i class="fa-li fa fa-certificate text-warning"></i>
             Cisco Meraki Network Associate</li>
           <li>
             <i class="fa-li fa fa-certificate text-warning"></i>
