update current work with aws cert

--- a/index.html
+++ b/index.html
@@ -376,6 +376,7 @@
         <p>
           <b>Current Work:</b>
           <ul>
+            <li>Working to complete my AWS Certified Solutions Architect - Associate. I have just recieved my AWS Certified Cloud Practitioner. Validation Number is here: W6Y2NVJCBEV11JK3</li>
             <li>Amazon Web Services - AWS</li>
             <ul>
               <li>Virtual Private Cloud - VPC</li>
