updates to index with new project and upload folder for pdf

--- a/index.html
+++ b/index.html
@@ -314,42 +314,21 @@
           <li>
             <i class="fa-li fa fa-check"></i>
             Linux Ubuntu/Xubuntu/Mint/FreeNAS/RedHat/RedHat OpenShift Container Platform</li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            MacOS & OS X
+          </li>
         </ul>
 
         <br>
 
-        <!-- Networking -->
         <div class="subheading mb-3">Services:</div>
-        <ul class="fa-ul mb-0">
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Exchange</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Active Directory</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            TCP/IP</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            DHCP</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            WINS</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            VPN</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            LDAP</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            RDP</li>
-        </ul>
-
+        Exchange, Active Directory, TCP/IP, DHCP, WINS, VPN, LDAP, RDP
+        
+        <br>
         <br>
 
-        Miscellaneous Applications:
+        <div class="subheading mb-3">Applications:</div>
         VMWare ESX/ESXi, Microsoft Hyper-V, TrueNAS SAN and NAS, Office365, Box, Dropbox, Zendesk, ServiceNow, ZOHO,
         Salesforce, JAMF Casper Suite, Cylance, Cisco ISE, Splunk, Sumologic, AppDynamics, DynaTrace, Centrify, Okta,
         Kaseya, Atera, N-Able, Solarwinds Orion, Zabbix, Nagios, FOG, Infoblox, Citrix XenApp, SeeBurger, BMC Control-M
@@ -370,22 +349,21 @@
           walking through Golden Gate Park with my dog POLO. </p>
         <p class="mb-0">When forced indoors, I follow a number of Netflix shows and movies, and I spend a large amount
           of my free time exploring the latest technology advancements
-          in IT and the front-end web development world - a new hobby since I've completed the UC Berkeley Coding Bootcamp 2019.
+          in IT and the front-end web development - a new hobby since I've completed the UC Berkeley Coding Bootcamp 2019.
         </p>
         <br>
         <p>
-          <b>Current Work:</b>
+          <div class="subheading mb-3">Current Work:</div>
           <ul>
-            <li>Working to complete my AWS Certified Solutions Architect - Associate. I have just recieved my AWS Certified Cloud Practitioner. Validation Number is here: W6Y2NVJCBEV11JK3</li>
-            <li>Amazon Web Services - AWS</li>
+            <li>UCB Final Project - APP@rent</li>
             <ul>
-              <li>Virtual Private Cloud - VPC</li>
-              <li>Route 53 conjunction with Godaddy</li>
-              <li>Elastic IP</li>
-              <li>Identity and Access Mangement - IAM</li>
-              <li>Security Groups</li>
-              <li>AWS CLI</li>
-              <li>2x EC2 with Apache & Nginx</li>
+              <li>Try it! <a href="https://www.apparent.ga" target="_blank">APP@rent</a></li>
+              <li>AWS + Heroku <a href="./projects/apparent/june4_2019.pdf" target="_blank" download>Cloud Infrastructure</a></li>
+              <li>Front End Code: <a href="https://github.com/kchoi123/PROD_APParent_React" target="_blank">Github</a></li>
+              <li>Back End Code: <a href="https://github.com/kchoi123/PROD_APParent" target="_blank">Github</a></li>
+            </ul>
+            <li>AWS + Nginx + Apache</li>
+            <ul>
               <li>Upload Portfolio Page:
                 <ul>
                   <li><a href="http://apache.kchoi.co" target="_blank">Apache</a></li>
@@ -393,10 +371,9 @@
                   <li><a href="http://www.kchoi.co" target="_blank">Main</a></li></li>
                 </ul>
             </ul>
-            <li>PM2</li>
-            <li>AWS Code Deploy</li>
-            <li>Docker</li>
-            <li>Jenkins</li>
+            <li>PM2 - Advanced, production process manager for Node.js</li>
+            <li>Docker - Securely build, share and run any application, anywhere</li>
+            <li>Jenkins - Build great things at any scale</li>
             <li>Python and BASH Automation</li>
           </ul>
         </p>
