adding new tasks to current work

--- a/index.html
+++ b/index.html
@@ -386,6 +386,14 @@
             <br>
 
             <i class="fas fa-spinner fa-spin"></i>  <b>Jenkins</b> - Build great things at any scale
+
+            <br>
+
+            <i class="fas fa-spinner fa-spin"></i>  <b>Terraform</b> - Write, Plan, and Create Infrastructure as Code
+            
+            <br>
+
+            <i class="fas fa-spinner fa-spin"></i>  <b>Ansible</b> - Simplify work. Break down silos. Speed transformation.
             
             <br>
 
