updating experience with Prosper

--- a/index.html
+++ b/index.html
@@ -99,6 +99,17 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
+            <h3 class="mb-0">Systems Engineer</h3>
+            <div class="subheading mb-3">Prosper Marketplace</div>
+            <p>Provide services in support of Prosper’s day-to-day operation and critical projects. Support a variety of operating systems and maintain environments in Public and Private Cloud infrastructure, as well as help Prosper continue to enhance the platform embracing Infrastructure as Code. Troubleshoot and problem solve across platform and application domains. </p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">October 2019 - Current</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
             <h3 class="mb-0">Senior Site Reliability Engineer</h3>
             <div class="subheading mb-3">First Republic Bank</div>
             <p>Monitoring, maintenance and troubleshooting of enterprise-wide information systems and related
@@ -350,7 +361,7 @@
         <h2 class="mb-5">Interests</h2>
         <p>Apart from being an engineer, I enjoy most of my time being outdoors. In the winter, I enjoy skiing
           and snowboarding. During the warmer months here in San Francisco, I enjoy hiking in the Marin County and
-          walking through Golden Gate Park with my dog POLO. </p>
+          walking through Golden Gate Park with my dog Polo. </p>
         <p class="mb-0">When forced indoors, I follow a number of Netflix shows and movies, and I spend a large amount
           of my free time exploring the latest technology advancements
           in IT and the front-end web development - a new hobby since I've completed the UC Berkeley Coding Bootcamp 2019.
@@ -361,21 +372,10 @@
           <ul>
             <i class="fas fa-cog fa-spin"></i>  <b>UCB Final Project</b>
             <ul>
-              <li>Try it! <a href="https://www.apparent.ga" target="_blank">APP@rent</a></li>
               <li>AWS + Heroku <a href="./projects/apparent/june4_2019.pdf" target="_blank" download>Cloud Infrastructure</a></li>
               <li>Front End Code: <a href="https://github.com/kchoi123/PROD_APParent_React" target="_blank">Github</a></li>
               <li>Back End Code: <a href="https://github.com/kchoi123/PROD_APParent" target="_blank">Github</a></li>
               <li>PM2 Dev Script: <a href="https://github.com/kchoi123/DEV_APParent_PM2_Script" target="_blank">Github</a></li>
-            </ul>
-
-            <i class="fas fa-cog fa-spin"></i>  <b>AWS + Nginx + Apache</b>
-            <ul>
-              <li>Upload Portfolio Page:
-                <ul>
-                  <li><a href="http://apache.kchoi.co" target="_blank">Apache</a></li>
-                  <li><a href="http://nginx.kchoi.co" target="_blank">Nginx</a></li></li>
-                  <li><a href="http://www.kchoi.co" target="_blank">Main</a></li></li>
-                </ul>
             </ul>
 
             <i class="fas fa-spinner fa-spin"></i>  <b>Docker</b> - Securely build, share and run any application, anywhere
