adding text for test
adding text for test

--- a/index.html
+++ b/index.html
@@ -435,6 +435,7 @@
   </div>
 
   <img src="favicon.ico" alt="test"/>
+  <div>github.com</div>
 
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
