--- a/index.html
+++ b/index.html
@@ -98,12 +98,23 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
+            <h3 class="mb-0">DevOps Engineer</h3>
+            <div class="subheading mb-3">Prosper Marketplace</div>
+            <p>Improving Prospers robust software development lifecycle processes. Participating in supporting new line of product development, maintaining existing infrastructure, and as well as designing and implementing the next-generation hybrid cloud platform. Collaborating with a group of talented individuals to ensure site reliability and providing an exceptional experience for end users and developers. </p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">December 2019 - Current</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
             <h3 class="mb-0">Systems Engineer</h3>
             <div class="subheading mb-3">Prosper Marketplace</div>
             <p>Provide services in support of Prosper’s day-to-day operation and critical projects. Support a variety of operating systems and maintain environments in Public and Private Cloud infrastructure, as well as help Prosper continue to enhance the platform embracing Infrastructure as Code. Troubleshoot and problem solve across platform and application domains. </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">October 2019 - Current</span>
+            <span class="text-primary">October 2019 - December 2019</span>
           </div>
         </div>
 
