update my interests
update my interests

--- a/index.html
+++ b/index.html
@@ -388,11 +388,11 @@
               <li>PM2 Dev Script: <a href="https://github.com/kchoi123/DEV_APParent_PM2_Script" target="_blank">Github</a></li>
             </ul>
 
-            <i class="fas fa-spinner fa-spin"></i>  <b>Docker</b> - Securely build, share and run any application, anywhere
+            <i class="fas fa-cog fa-spin"></i>  <b>Docker</b> - Custom built pipelines that compile containers and store them in docker hub or internal artifactories. 
             
             <br>
 
-            <i class="fas fa-spinner fa-spin"></i>  <b>Jenkins</b> - Build great things at any scale
+            <i class="fas fa-cog fa-spin"></i>  <b>Jenkins</b> - Used GO templates to start up custom worker nodes that execute vital pipeline tasks.
 
             <br>
 
@@ -404,7 +404,11 @@
 
             <br>
 
-            <i class="fas fa-stroopwafel fa-spin"></i>  <b>Ansible</b> - Simplify work. Break down silos. Speed transformation.
+            <i class="fas fa-cog fa-spin"></i>  <b>Ansible</b> - Developed playbooks, roles, and galaxy to automate build pipelines.
+
+            <br>
+
+            <i class="fas fa-cog fa-spin"></i>  <b>Helm Chart</b> and <b>Helmfile</b> - Develope custom yaml files that execute environment specific tasks.
             
             <br>
 
