--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
         <div class="subheading mb-5">San Francisco, CA .
           <a href="mailto:kevin@kchoi.co">kevin@kchoi.co</a>
         </div>
-        <p class="lead mb-5">Well-rounded IT Engineer with 10+ years of experience in the IT industry. Specializing in
-          infrastructure build outs, server & network configurations, administration, and executive level documentation.
+        <p class="lead mb-5">Well-rounded DevOps Engineer with 10+ years of experience. Specializing in
+          infrastructure build outs, virtual machine & network configurations, administration, and executive level documentation.
           Looking to expand my skills in site reliability, automation, and security.</p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/kevin-choi-5b59aa40/" target="_blank">
