update it manager des
update it manager des

--- a/index.html
+++ b/index.html
@@ -151,7 +151,18 @@
             <p>Doubled company revenue from 2014 to 2015 by initiating new product lines. Provided technical guidance, professional development, and career progression to 12 employees.</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">December 2013 - August 2016</span>
+            <span class="text-primary">June 2014 - August 2016</span>
+          </div>
+        </div>
+        
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">IT Manager</h3>
+            <div class="subheading mb-3">FixSwift IT Solutions</div>
+            <p>Managed corporate help desk operations including enterprise help desk support system and IT support staff workflows, schedules, follow-up validation.</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">December 2013 - June 2014</span>
           </div>
         </div>
 
