--- a/index.html
+++ b/index.html
@@ -453,6 +453,20 @@
             <i class="fa-li fa fa-certificate text-warning fa-spin"></i>
             Apple Certified Associate – Mac Integration</li>
           <li>
+          <li>
+            <i class="fa-li fa fa-certificate text-warning fa-spin"></i>
+            Splunk Fundamentals</li>
+          <li> 
+          <li>
+            <i class="fa-li fa fa-certificate text-warning fa-spin"></i>
+            Coursera: 
+            <ul>
+              <li>Essential Google Cloud Infrastructure: Foundation</li>
+              <li>Google Cloud Fundamentals: Core Infrastructure</li>
+              <li>Essential Google Cloud Infrastructure: Core Services</li>
+            </ul>
+          </li>
+          <li> 
         </ul>
       </div>
     </section>
