--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
           <li> 
           <li>
             <i class="fa-li fa fa-certificate text-warning fa-spin"></i>
-            Coursera: 
+            Google Cloud Platform - Coursera: 
             <ul>
               <li>Essential Google Cloud Infrastructure: Foundation</li>
               <li>Google Cloud Fundamentals: Core Infrastructure</li>
