--- a/index.html
+++ b/index.html
@@ -458,12 +458,12 @@
             Splunk Fundamentals</li>
           <li> 
           <li>
-            <i class="fa-li fa fa-certificate text-warning fa-spin"></i>
+            <i class="fa-li fa fa-certificate text-warning"></i>
             Google Cloud Platform - Coursera: 
             <ul>
-              <li>Essential Google Cloud Infrastructure: Foundation</li>
-              <li>Google Cloud Fundamentals: Core Infrastructure</li>
-              <li>Essential Google Cloud Infrastructure: Core Services</li>
+              <li><i class="fa-li fa fa-certificate text-warning fa-spin"></i>Essential Google Cloud Infrastructure: Foundation</li>
+              <li><i class="fa-li fa fa-certificate text-warning fa-spin"></i>Google Cloud Fundamentals: Core Infrastructure</li>
+              <li><i class="fa-li fa fa-certificate text-warning fa-spin"></i>Essential Google Cloud Infrastructure: Core Services</li>
             </ul>
           </li>
           <li> 
