--- a/index.html
+++ b/index.html
@@ -350,15 +350,15 @@
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-check"></i>
-            Linux Ubuntu/Xubuntu/Mint/FreeNAS/TrueNAS/RedHat/RedHat OpenShift Container Platform
+            Linux RedHat/CentOS/Ubuntu
           </li>
           <li>
             <i class="fa-li fa fa-check"></i>
-            Windows NT/95/98/XP/Vista/7/10/2000/2003/2008R2/2012R2/2016/Nano Servers
+            Windows Server
           </li>
           <li>
             <i class="fa-li fa fa-check"></i>
-            MacOS & OS X
+            MacOS & Windows Desktop
           </li>
         </ul>
 
