--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
         <br>
 
         <div class="subheading mb-3">Services:</div>
-        Exchange, Active Directory, TCP/IP, DHCP, WINS, VPN, LDAP, RDP
+        Hyper-V, Exchange, AD, TCP/IP, DHCP, WINS, VPN, LDAP, RDP, IIS
         
         <br>
         <br>
